--- a/index.html
+++ b/index.html
@@ -5,19 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Journey of Love</title>
 
-    <!-- GOOGLE FONT (AMAN HP) -->
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600&display=swap" rel="stylesheet">
-
     <style>
-        body {
-            font-family: 'Fredoka', sans-serif;
-            background: #ffebee;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            margin: 0;
-        }
+body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, Arial, sans-serif;
+}
+
 
         .box {
             background: white;
@@ -221,3 +213,4 @@
 
 </body>
 </html>
+
