--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@ body {
             text-align: center;
             width: 90%;
             max-width: 360px;
-            opacity: 0;
-            transform: scale(0.9);
-            pointer-events: none;
+            opacity: 1;
+            transform: scale(1);
+            pointer-events: auto;
             transition: all 0.5s ease;
         }
 
@@ -213,4 +213,5 @@ body {
 
 </body>
 </html>
+
 
